--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="logo">REC</div>
           </div>
         </nav>
-        <div class="login-signin">
+        <div class="login-signin c">
           <h2>Login</h2>
           <form>
             <input type="email" name="email" value="" placeholder="@" required>
@@ -37,6 +37,7 @@
               <span>Apple</span>
             </li>
           </ul>
+          <p class="regis">don’t have an account? <a href="signup.html">Register here</a></p>
         </div>
       </section>
   </body>
