--- a/signup.html
+++ b/signup.html
@@ -1,20 +1,55 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>My App - SignUp</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/index.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <div class="container">
       <section>
-        <!-- 
-################################
-This page update soon
-################################
--->
+        <nav>
+          <div class="dot-logo">
+            <div class="dot"></div>
+            <div class="logo">REC</div>
+          </div>
+        </nav>
+        <div class="login-signin c">
+          <h2>Login</h2>
+          <form>
+            <input type="text" name="name" value="" placeholder="Name" />
+            <input
+              type="text"
+              name="username"
+              value=""
+              placeholder="Username"
+            />
+            <input
+              type="email"
+              name="email"
+              value=""
+              placeholder="email@dot.com"
+              required
+            />
+            <input
+              type="password"
+              name="password"
+              value=""
+              placeholder="password"
+            />
+            <input
+              type="password"
+              name="password"
+              value=""
+              placeholder="password"
+            />
+            <input type="submit" name="submit" value="LogIn" />
+          </form>
+          <p class="regis">
+            have an account? <a href="index.html">Login here</a>
+          </p>
+        </div>
       </section>
     </div>
   </body>
