--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,7 @@
     <title>My App - SignUp</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./fonts/font.css" />
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
