--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
           </div>
         </nav>
         <div class="login-signin c">
-          <h2>Login</h2>
+          <h2>SignUp</h2>
           <form>
             <input type="text" name="name" value="" placeholder="Name" />
             <input
